@@ -1,11 +1,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
   <head>
-    <title>Form Test Two</title>
+    <title>Form Test Three</title>
   </head>
 
   <body>
-   <:include test2.pyinc:>
+   <:include test3.pyinc:>
 
 
 
@@ -13,7 +13,7 @@
     <address><a href="mailto:smulloni@smullbola.smullyan.org"></a></address>
 <!-- Created: Mon Nov 18 17:50:01 EST 2002 -->
 <!-- hhmts start -->
-Last modified: Tue Nov 19 09:22:27 EST 2002
+Last modified: Mon Nov 18 17:50:31 EST 2002
 <!-- hhmts end -->
   </body>
 </html>
